--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -188,13 +188,14 @@ body {
 .item__input {
     width: 100%;
     font-size: 20px;
-    max-height: 52px;
+    height: 52px;
     color: #807d7e;
 }
 .item__input--consulting {
     padding: 21px 40px;
     border: 1px solid #ddd;
     background: #f8f8f8;
+    height: 65px;
 }
 .item__placeholder {
     color: #37393f;
@@ -234,30 +235,29 @@ body {
     box-shadow: 0 0.5em 0.5em -0.4em #525eca;
 }
 /* =================================================== */
-.euphoria__wrapper {
+.info__wrapper {
     font-family: "Causten";
     max-width: 895px;
     margin: 0 auto;
+    margin-bottom: 100px;
 }
-.euphoria__wrap-title {
+.info__wrap-title {
     margin-bottom: 50px;
 }
-.euphoria__title {
+.info__title {
     margin-bottom: 20px;
 }
 .subtitle {
 }
-.euphoria__subtitle {
+.info__subtitle {
 }
-.form-2 {
+.info__form {
 }
-.euphoria__form {
-}
-.euphoria__items {
+.info__items {
     gap: 31px 42px;
     margin-bottom: 30px;
 }
-.euphoria__item {
+.info__item {
     width: 426px;
     display: flex;
     flex-direction: column;
@@ -271,13 +271,13 @@ body {
 }
 .item__input {
 }
-.item__input--euphoria {
+.item__input--info-form {
     border-radius: 8px;
     background: #f6f6f6;
     padding: 18px 22px;
 }
 .item__input::placeholder,
-.item__textarea--euphoria::placeholder {
+.item__textarea--info-form::placeholder {
     color: #807d7e;
     font-size: 16px;
 }
@@ -291,54 +291,22 @@ body {
     min-height: 222px;
     resize: vertical;
 }
-.item__textarea--euphoria {
+.item__textarea--info-form {
     border-radius: 8px;
-    background: #F6F6F6;
-
+    background: #f6f6f6;
 }
-.euphoria__checkbox {
+.info__checkbox {
     margin-bottom: 50px;
 }
-
-.checkbox__item {
+.checkbox__item--info {
     display: flex;
     gap: 11px;
 }
-.checkbox__input {
-    width: 20px;
-    color: #bebcbd;
-}
-.checkbox__input {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    outline: none;
-}
-.checkbox__input::before {
-    content: "\2713";
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    color: #fff;
-    border: 2px solid #bebcbd;
-    width: 20px;
-    height: 20px;
-}
-.checkbox__input:checked::before {
-    color: #bebcbd;
-    background-color: #8a33fd;
-    border: #8a33fd;
-}
-.checkbox__label {
-    color: #3c4242;
-    font-size: 20px;
-}
-.euphoria__buttons {
+.info__buttons {
     display: flex;
     gap: 30px;
 }
-.euphoria__btn {
+.info__btn {
     padding: 12px 40px;
     font-size: 20px;
 }
@@ -361,6 +329,67 @@ body {
 }
 
 .select {
+    color: #807d7e;
 }
 .select__option {
+}
+/* ========================================== */
+.euphoria__form-check {
+}
+.check-out {
+}
+.check-out__wrapper {
+    max-width: 802px;
+    margin: 0 auto;
+}
+.check-out__wrap-title {
+    margin-bottom: 50px;
+}
+
+.check-out__title {
+    position: relative;
+    margin-bottom: 20px;
+    padding-left: 15px;
+}
+.check-out__title::before {
+    content: "";
+    background-color: #8a33fd;
+    border-radius: 10px;
+    position: absolute;
+    width: 6px;
+    height: 28px;
+    top: 0;
+    left: 0;
+}
+.check-out__subtitle {
+}
+.check-out__form {
+}
+.form__items {
+    gap: 28px 38px;
+    margin-bottom: 43px;
+}
+
+/* .item--50 {
+    flex: 0 1 47.5%;
+} */
+.form__item {
+    width: 382px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    flex: 0 1 47.6%;
+}
+.item--33p {
+    flex: 1 1 30%;
+}
+.item__input--form {
+    border-radius: 8px;
+    background: #f6f6f6;
+    padding: 16px 20px;
+}
+.form__buttons {
+    margin-bottom: 20px;
+}
+.form__btn {
 }
