--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -200,7 +200,8 @@ body {
     background: #f8f8f8;
     height: 65px;
 }
-.item__placeholder {
+.item__placeholder,
+.input-card__label {
     color: #37393f;
     position: absolute;
     left: 40px;
@@ -211,7 +212,7 @@ body {
 }
 .item__placeholder--visible {
 }
-.item__placeholder--textarea {
+.placeholder--textarea {
     top: 22px;
 }
 .item__textarea {
@@ -345,9 +346,6 @@ body {
     margin-bottom: 32px;
 }
 .shipping {
-    border-top: 1px solid #edeef2;
-    /* margin-top: 30px; */
-    padding-top: 30px;
 }
 .check-out__wrapper {
     max-width: 802px;
@@ -408,6 +406,10 @@ body {
 .shipping__wrap-title {
     margin-bottom: 30px;
 }
+.shipping__wrap-title:not(:first-child) {
+    padding-top: 30px;
+    border-top: 1px solid #edeef2;
+}
 .shipping__title {
     color: #3c4242;
     font-size: 22px;
@@ -436,6 +438,11 @@ body {
     padding: 38px 48px 38px 28px;
 }
 .item-shipping {
+    margin-bottom: 50px;
+}
+.item-shipping:not(:last-child) {
+    border-bottom: 1px solid #edeef2;
+    margin-bottom: 30px;
 }
 .item-shipping__row {
 }
@@ -444,18 +451,31 @@ body {
     margin-bottom: 25px;
     border-bottom: 1px solid #bebcbd;
 }
+.item-shipping__row--info:not(:last-child) {
+    margin-bottom: 30px;
+}
 .item-shipping__radio {
     opacity: 0;
     position: absolute;
+    width: 0px;
+    height: 0px;
 }
 .item-shipping__label {
+    display: inline-block;
+    line-height: 1.5;
+    width: 100%;
+    color: #3c4242;
+    font-size: 20px;
+    font-weight: 700;
+}
+.item-shipping__label--radio {
     position: relative;
     padding-left: 37px;
     cursor: pointer;
-    display: inline-block;
-    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
 }
-.item-shipping__label::before {
+.item-shipping__label--radio::before {
     content: "";
     position: absolute;
     left: 0;
@@ -468,7 +488,7 @@ body {
     background-color: #fff;
 }
 
-.item-shipping__label::after {
+.item-shipping__label--radio::after {
     content: "";
     position: absolute;
     left: 4.5px;
@@ -480,6 +500,86 @@ body {
     background-color: #807d7e;
     display: none;
 }
-.item-shipping__radio:checked + .item-shipping__label::after {
+.item-shipping__radio:checked + .item-shipping__label--radio::after {
     display: block;
+}
+.item-shipping__label--radio:not(:last-child) {
+    /* margin-bottom: 30px; */
+}
+.item-shipping__wraper-price {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+.item-shipping__block {
+}
+.item-shipping__price {
+}
+.item-shipping__text {
+    color: #807d7e;
+    font-size: 16px;
+    font-weight: 500;
+}
+.item-shipping__title {
+    color: #3c4242;
+    font-size: 20px;
+    font-weight: 700;
+}
+.item-shipping__pay {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+.item-shipping__pay img {
+    background-color: #fff;
+    padding: 15px;
+    width: 80px;
+    border-radius: 10px;
+}
+
+.item-shipping__inputs {
+}
+.input-card {
+    gap: 28px 30px;
+    padding-right: 23px;
+}
+.input-card__item {
+    position: relative;
+    width: 337px;
+}
+.input-card__input {
+    padding: 16px 20px;
+    border-radius: 8px;
+    border: 1px solid #3c4242;
+    background-color: inherit;
+    width: 100%;
+    font-size: 20px;
+}
+.input-card__label {
+    color: #807d7e;
+    font-size: 14px;
+    font-weight: 400;
+    left: 20px;
+}
+.item-shipping__block-pay {
+    margin-top: 30px;
+    padding-left: 37px;
+    display: none;
+    /* max-height: 0;
+    margin-top: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; */
+}
+.item-shipping__radio:checked
+    + .item-shipping__label--radio
+    + .item-shipping__block-pay {
+    display: block;
+    /* margin-top: 30px;
+    max-height: 500px;
+    opacity: 1;
+    visibility: visible; */
+}
+.check-out__btn {
+    padding: 16px 20px;
 }
