--- a/lesson_17/css/components.css
+++ b/lesson_17/css/components.css
@@ -1,24 +1,24 @@
 .items {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 100%; */
 }
 .item {
-    flex: 1 1 47.55%;
+    /* flex: 1 1 47.55%; */
 }
 .title {
-    color: #3c4242;
+    /* color: #3c4242;
     font-size: 28px;
     font-weight: 600;
-    line-height: 33.5px; /* 119.643% */
-    letter-spacing: 0.56px;
+    line-height: 33.5px; /* 119.643%
+    letter-spacing: 0.56px; */
 }
 .subtitle {
-    color: #3c4242;
+    /* color: #3c4242;
     font-size: 22px;
     font-weight: 600;
-    line-height: 33.5px; /* 152.273% */
-    letter-spacing: 0.44px;
+    line-height: 33.5px; /* 152.273% 
+    letter-spacing: 0.44px; */
 }
 .button {
     position: relative;
@@ -51,18 +51,18 @@
 .button--grey {
     text-align: center;
     font-size: 18px;
-    /* padding: 16px 20px; */
     position: relative;
     transition: box-shadow 0.3s, background-color 0.3s;
 }
 .button--purple {
-     background: #8a33fd;
+    background: #8a33fd;
     color: #fff;
     text-align: center;
     font-family: "Causten";
     font-size: 20px;
     font-weight: 600;
     border-radius: 8px;
+    padding: 16px 20px;
 }
 .button--purple:hover {
     background: #7124d5;
@@ -76,39 +76,4 @@
 .button--grey:hover {
     background: #d7d5d5;
     box-shadow: 0 0.5em 0.5em -0.4em #d7d5d5;
-}
-.checkbox {
-    display: flex;
-    flex-direction: column;
-    row-gap: 15px;
-}
-.checkbox__input {
-    width: 20px;
-    color: #bebcbd;
-}
-.checkbox__input {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    outline: none;
-}
-.checkbox__input::before {
-    content: "\2713";
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-    color: #fff;
-    border: 2px solid #bebcbd;
-    width: 20px;
-    height: 20px;
-}
-.checkbox__input:checked::before {
-    color: #bebcbd;
-    background-color: #8a33fd;
-    border: #8a33fd;
-}
-.checkbox__label {
-    color: #3c4242;
-    font-size: 20px;
 }
