--- a/lesson_17/css/fonts.css
+++ b/lesson_17/css/fonts.css
@@ -1,7 +1,11 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:700&display=swap");
-@import url("https://fonts.googleapis.com/css?family=Inter:regular,500,600&display=swap");
+/* @import url("https://fonts.googleapis.com/css?family=Merriweather:regular,700,700italic&display=swap"); */
+@import url("https://fonts.googleapis.com/css?family=Inter:regular,700,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Cormorant+Infant:regular,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=DM+Serif+Text:regular&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Raleway:500,600,700&display=swap");
 /* Підключення вручну */
-@font-face {
+/* @font-face {
     font-family: "Causten";
     src: url(../fonts/Causten-Regular.woff2) format("woff2"),
         url(../fonts/Causten-Regular.woff) format("woff");
@@ -40,4 +44,4 @@
         font-weight: 700;
         font-style: normal;
         font-display: swap;
-}
+} */
