--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -1,2 +1,186 @@
 @import url(fonts.css);
 @import url(reset.css);
+
+html,
+body {
+    height: 100%;
+    font-family: "Causten";
+    font-size: 18px;
+    color: #807d7e;
+    width: auto;
+}
+.wraper {
+    overflow: clip;
+    min-height: 100%;
+    position: relative;
+}
+.main {
+}
+[class*="__container"] {
+    max-width: 1200px;
+    margin: 0 auto;
+    box-sizing: content-box;
+    padding: 0 15px;
+}
+.footer {
+    height: 200px;
+}
+/* ================================================ */
+.page__wrapper {
+    background-color: #0e333d;
+}
+.page__container {
+}
+.page__our {
+}
+.our {
+}
+.our__titles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 77px;
+}
+.title {
+}
+.our__title {
+    color: #fff;
+    font-family: "DM Serif Text";
+    font-size: 48px;
+    font-weight: 400;
+    line-height: 127%; /* 60.96px */
+    margin-bottom: 23px;
+    padding: 0 15px;
+}
+
+.our__subtitle {
+    color: #ebebeb;
+    font-family: "Raleway";
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 127%; /* 25.4px */
+    margin-bottom: 34px;
+}
+.our__list {
+}
+.list-our {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 41px;
+}
+.list-our__item {
+    color: #fff;
+    font-family: "Raleway";
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 127%; /* 22.86px */
+    cursor: pointer;
+}
+.list-our__item:hover {
+    text-decoration-line: underline;
+}
+@media (max-width: 839.98px) {
+    .our__titles {
+        margin-bottom: 50px;
+    }
+    .our__title {
+        font-size: 40px;
+    }
+    .list-our {
+        gap: 32px;
+    }
+}
+@media (max-width: 479.98px) {
+    .our__titles {
+        margin-bottom: 44px;
+    }
+    .our__title {
+        font-size: 36px;
+        margin-bottom: 18px;
+    }
+    .list-our {
+        gap: 25px;
+    }
+    .our__subtitle {
+        font-size: 18px;
+        margin-bottom: 22px;
+    }
+    .list-our__item {
+        font-size: 16px;
+    }
+}
+
+
+.our__items {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    /* margin: 0 -15px; */
+}
+.our__column {
+    padding: 0 15px;
+    flex: 0 1 25%;
+}
+
+.our__item {
+    cursor: pointer;
+}
+.item {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.item__image {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 271 / 270;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.item__image:not(:last-child) {
+    margin-bottom: 17px;
+}
+.item__name,
+.item__price {
+    color: #fff;
+    font-family: "Cormorant Infant";
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 140%; /* 33.6px */
+}
+.item__name:not(:last-child) {
+    margin-bottom: 4px;
+}
+.item__price {
+}
+@media (min-width: 899.98px) {
+    .our {
+    padding: 94px 0;
+  }
+}
+@media (max-width: 899.98px) {
+      .our {
+    padding: 50px 0;
+  }
+    .our__column {
+        flex: 0 1 50%;
+    }
+    .item__name,
+    .item__price {
+        font-size: 20px;
+    }
+    .item__image:not(:last-child) {
+    margin-bottom: 12px;
+}
+.our__items {
+  row-gap: 20px;
+}
+}
+@media (max-width: 479.98px) {
+  .our {
+    padding: 25px 0;
+  }
+      .our__column {
+        flex: 0 1 100%;
+    }
+}
