--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -35,17 +35,24 @@ body {
 }
 .our {
 }
+.titles {
+  display: flex;
+  flex-direction: column;
+
+}
+.titles--center {
+  align-items: center;
+
+}
 .our__titles {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     margin-bottom: 77px;
 }
 .title {
+  font-family: "DM Serif Text";
+
 }
 .our__title {
     color: #fff;
-    font-family: "DM Serif Text";
     font-size: 48px;
     font-weight: 400;
     line-height: 127%; /* 60.96px */
@@ -59,6 +66,8 @@ body {
     font-size: 20px;
     font-weight: 500;
     line-height: 127%; /* 25.4px */
+}
+.our__subtitle:not(:last-child) {
     margin-bottom: 34px;
 }
 .our__list {
@@ -222,4 +231,3 @@ body {
         flex: 0 1 100%;
     }
 }
-
